# CCL

./: .gitignore  CMakeLists.txt  main  main.cpp  output  output.ll  output.s  preprocessed.c  preprocessed_output.c  test  test.s  test_result.txt
examples/: simple.c
include/: ErrorManager.h  SemanticAnalyzer.h  SymbolTypeBuilder.h  SyntaxOutputVisitor.hpp  ast.h  astSysy.h  codeGenerator.h  evalConstant.h  lexer.h  parser.h  parserSysy.h  printTree.h  symbolTable.h
lib/: runtime.c
src/: SemanticAnalyzer.cpp  SymbolTypeBuilder.cpp  ast.cpp  codeGenerator.cpp  errorHandler.cpp  evalConstant.cpp  lexer.cpp  main.cpp  parser.cpp  parserSysy.cpp  printTree.cpp  semanticAnalyzer.cpp  symbolTable.cpp
test/: CMakeLists.txt  test_array.c  test_array_param_pass.c  test_comipler.cpp  test_complex_expr.c  test_compunit.c  test_control_flow.c  test_decl.c  test_error_handle.c  test_func.c  test_func_param.c  test_if_stmt.c  test_init.c  test_io.c  test_muti_dim_array.c  test_partial_array_access.c  test_scope.c  test_short_circuit_evaluation.c  test_simple.c  test_type.c
tests/: run_tests.sh
tests/inputs/: test.c  test_array.c  test_array_param_pass.c  test_func.c  test_global_vardecl.c  test_redefinition.c  test_scope.c  test_two_dimarray.c
tests/outputs/: test_func.s
